--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,9 @@
             <div class="sun-reflection"></div>
         </div>
         <div class="ocean"></div>
-        <div class="seagull seagull-1">✔️</div>
-        <div class="seagull seagull-2">✔️</div>
+        <div class="seagull seagull-1"></div>
+        <div class="seagull seagull-2"></div>
+        <div class="seagull seagull-3"></div>
     </div>
 
     <main>
