import first version of function getMovies(#10)

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
 
     <!-- Scripts JavaScript -->
     <script src="services.js"></script>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js"></script>
+
 </body>
 </html>
