change for see cards of movies (#9)(#10)

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,8 @@
     </footer>
 
     <!-- Scripts JavaScript -->
-    <script src="services.js"></script>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js"></script>
+
+
 </body>
 </html>
