--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>🎞Cine de Verano🌅🌊</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
+  <link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
 </head>
 <body>
   <header>
@@ -55,9 +57,18 @@
     </section>
   </main>
 
-  <footer>
-    <p>© 2025 Cine de Verano • Proyecto educativo</p>
+  <footer class="site-footer">
+    <p>© 2025 Cine de Verano • Proyecto Bootcamp FemCoders FullStakc+DevOps • Realizado por Esther Tapias</p>
+    <div class="social-icons">
+      <a href="https://github.com/EstherTapias" target="_blank" aria-label="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/esther-tapias-paez-camino/" target="_blank" aria-label="LinkedIn">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
   </footer>
+  
 
   <script type="module" src="main.js"></script>
 </body>
